z-index fixed-video

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -618,7 +618,7 @@ $guter: 32px;
 	visibility: hidden;
 	opacity: 0;
 	transition: opacity .15s;
-	z-index: 10;
+	z-index: 11;
 
 	&.open {
 		visibility: visible;
